Got rid of deprecated JVM options